Implement hide. Modify obstacle avoidance to scale seeing distance based on speed.

--- a/Assets/TODO.txt
+++ b/Assets/TODO.txt
@@ -4,3 +4,8 @@ Steering Behaviours
 - Offset pursuit.
 - Modify Obstacle avoidance to be more similar to wall avoidance
 - Remove targetPos in Seek, Flee, etc...
+
+Reusable Pathfinding
+
+Custom coroutines
+
