--- a/Assets/TODO.txt
+++ b/Assets/TODO.txt
@@ -1,7 +1,7 @@
 Steering Behaviours
-- Path Following.
 - Modify Obstacle avoidance to be more similar to wall avoidance
 - Remove targetPos in Seek, Flee, etc...
+- Group behaviours
 
 Reusable Pathfinding
 
